<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Vendedor.vender">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#1d5c86"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ic_car" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/carro_marca"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/marca"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/carro_modelo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/modelo"
            android:inputType="textPersonName"
            android:padding="10dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/carro_año"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/anio"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/carro_color"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/color"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/transmision" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/isAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="70dp"
            android:text="@string/estandar" />

        <CheckBox
            android:id="@+id/isUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="15dp"
            android:layout_marginTop="4dp"
            android:text="@string/automatico" />
    </LinearLayout>


    <Button
        android:id="@+id/subirDatos"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:text="@string/publicar" />

    <Button
        android:id="@+id/cambio_lenguaje"
        android:layout_marginVertical="550dp"
        android:layout_marginStart="330dp"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_translate"
        android:orientation="horizontal"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/teal_200"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_admin"
        tools:layout_editor_absoluteY="729dp" />

</RelativeLayout>