<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:background="@color/teal_200"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_car" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/marca_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/marca"/>

                <TextView
                    android:id="@+id/color_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:text="@string/color"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/anio_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:text="@string/anio"/>

                <TextView
                    android:id="@+id/modelo_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:text="@string/modelo"/>

            </LinearLayout>



        </LinearLayout>

        <Button
            android:id="@+id/ic_delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:background="@drawable/ic_delete"/>


    </LinearLayout>

</RelativeLayout>